--- a/source/metadata.yml
+++ b/source/metadata.yml
@@ -1,13 +1,13 @@
 # textbook information
 
-title: Title
-subtitle: Subtitle
+title: Lazy Davey Goes to the Hot Dog Factory
+#subtitle: Subtitle
 
 author:
-  - name: First Author
-    affiliation: College
-  - name: Second Author
-    affiliation: University
+  - name: T Fluhr
+    affiliation: Illinois Tech
+#  - name: Second Author
+#    affiliation: University
 
 contributor:
   - Research Assistant
@@ -15,19 +15,22 @@ contributor:
 
 publication-year: 2021
 doi: 10.1000/xyz123
-isbn-p: something
-isbn-e: something
-website: seomthing
+isbn-p: 8675309
+#isbn-e: something
+website: https://www.hebrewnational.com/
 
 keywords:
-  - keyword
-  - keyword
-  - keyword
+  - Hot Dogs
+  - Lazy Davey
+  - Food Science
+  - The Jungle
 
 subjects: 
-  - Subject
-  - Subject
-  - Subject
+  - Food Science
+  - Rat Feces
+  - Industrialization
+  - Animal Cruelty
+  - Late Capitalism
 
 description: |
   Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
@@ -54,7 +57,7 @@ copyright:
 
 publisher:
   name: Publishing Organization
-  location: City, State
+  location: Fake City, Illinois
   website: https://example.com
   disclaimer: |
     Use this space to add any legal disclaimers about the book.
